# fantasy-dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
fantasy/: api.py  dashboard.py  data.py  plots.py  utils.py
fantasy/data/: manager_event_stats.csv  player_event_stats.csv  player_info.csv
fantasy/data/2024/: automatic_subs.csv  manager_info.csv  manager_squad.csv  team_info.csv
fantasy/data/2025/: automatic_subs.csv  manager_event_stats.csv  manager_info.csv  manager_squad.csv  player_event_stats.csv  player_info.csv  team_info.csv
